Fixed the spacing on the side of the page
Changed it from margin to padding and also moved it from body into the header.

--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: column;
     background-color: #1F2937;
+    padding-left: 150px;
+    padding-right: 150px;
 }
 
 .top {
@@ -14,8 +16,6 @@
 }
 
 body {
-    margin-left: 150px;
-    margin-right: 150px;
     font-family: Roboto, sans-serif;
 }
 
@@ -23,4 +23,10 @@ body {
     font-size: 24px;
     color: #F9FAF8;
     font-weight: 500;
+}
+
+a {
+    color: #E5E7EB;
+    font-size: 18px;
+    text-decoration: none;
 }
